# hollow-lang

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ast_expr.h  ast_node.h  ast_printer.h  ast_stmt.h  ast_type.h  ast_utils.h  ast_visitor.h  bytecode_disassembler.h  bytecode_emitter.h  bytecode_emitter_tests.h  compiler.h  constant_evaluator.h  constant_folder.h  debug_utils.h  diagnostic.h  environment.h  error_report.h  l_value.h  lexer.h  lexer_state.h  lexer_tests.h  memory_arena.h  opcode_data.h  opcodes.h  parser.h  parser_tests.h  semantic_analysis.h  semantic_utils.h  symbol_resolution.h  symbol_table.h  token.h  token_stream.h  transition_table.h  type_checker.h  type_conversions.h  type_info.h  vm.h  vm_function_table.h
scripts/: lexer_expected.txt  lexer_expected_generator.py  opcode_data_generator.py
src/: ast_expr.cpp  ast_node.cpp  ast_printer.cpp  ast_stmt.cpp  ast_type.cpp  ast_utils.cpp  bytecode_disassembler.cpp  bytecode_emitter.cpp  bytecode_emitter_tests.cpp  compiler.cpp  constant_evaluator.cpp  constant_folder.cpp  debug_utils.cpp  diagnostic.cpp  environment.cpp  lexer.cpp  lexer_tests.cpp  main.cpp  opcode_data.cpp  parser.cpp  parser_tests.cpp  semantic_analysis.cpp  semantic_utils.cpp  symbol_resolution.cpp  symbol_table.cpp  token_stream.cpp  transition_table.cpp  type_checker.cpp  type_conversions.cpp  vm.cpp  vm_function_table.cpp
src/archive/: bytecode_disassembler.cpp  bytecode_disassembler.h  bytecode_emitter.cpp  bytecode_emitter.h  bytecode_emitter_tests.cpp  bytecode_emitter_tests.h  constant_pool.cpp  constant_pool.h  opcode_data.cpp  opcode_data.h  opcodes.h  register.h  register_allocation.cpp  register_allocation.h  register_allocation_core.h  register_pool.cpp  register_pool.h  vm.cpp  vm.h  vm_function_table.cpp  vm_function_table.h  x86_64_emitter.cpp  x86_64_emitter.h
src/codegen/: code_emitter.h  target_info.h
src/core/: arena_block.h  ast_visitor.h  compiler.cpp  compiler.h  diagnostic.cpp  diagnostic.h  l_value.h  memory_arena.h  type_info.h
src/ir/: ir_core.h  ir_environment.cpp  ir_environment.h  ir_generator.cpp  ir_generator.h  ir_logger.cpp  ir_logger.h  ir_lowering.cpp  ir_lowering.h
src/lexer/: lexer.cpp  lexer.h  token.h  transition_table.cpp  transition_table.h
src/optimization/: constant_folder.cpp  constant_folder.h  constant_propagation.cpp  constant_propagation.h  dead_code_elimination.cpp  dead_code_elimination.h  optimization_pass.h  optimizer.cpp  optimizer.h
src/parser/: ast_expr.cpp  ast_expr.h  ast_node.cpp  ast_node.h  ast_stmt.cpp  ast_stmt.h  ast_type.cpp  ast_type.h  parser.cpp  parser.h  token_stream.cpp  token_stream.h
src/semantics/: constant_evaluator.cpp  constant_evaluator.h  environment.cpp  environment.h  semantic_analysis.cpp  semantic_analysis.h  symbol_resolution.cpp  symbol_resolution.h  symbol_table.cpp  symbol_table.h  type_checker.cpp  type_checker.h  type_conversions.cpp  type_conversions.h  type_table.cpp  type_table.h
src/testing/: lexer_tests.cpp  lexer_tests.h  parser_tests.cpp  parser_tests.h
src/utils/: ast_printer.cpp  ast_printer.h  ast_utils.cpp  ast_utils.h  debug_utils.cpp  debug_utils.h  semantic_utils.cpp  semantic_utils.h  type_utils.cpp  type_utils.h
tests/: asm_test.hollow
tests/bytecode_emitter_tests/: bytecode_emitter_log.txt  short_circuit_test.hollow
tests/lexer_tests/: benchmark_test.hollow  control_flow_test.hollow  example.hollow  function_test.hollow  identifiers_test.hollow  invalid_detection.hollow  keywords_test.hollow  lexer_log.txt  literals_test.hollow  operators_test.hollow
tests/parser_tests/: binary_expressions_test.hollow  control_flow_test.hollow  example.hollow  functions_test.hollow  literals_test.hollow  parser_log.txt  temp.hollow  unary_expressions_test.hollow  variables_test.hollow
tests/semantic_tests/: type_conversions.hollow
